--- a/lms/templates/courseware/course_about_sidebar_header.html
+++ b/lms/templates/courseware/course_about_sidebar_header.html
@@ -36,7 +36,27 @@ from six import text_type
         ).replace(u" ", u"+")
         tweet_action = u"http://twitter.com/intent/tweet?text={tweet_text}".format(tweet_text=tweet_text)
 
-        facebook_link = static.get_value('course_about_facebook_link', settings.PLATFORM_FACEBOOK_ACCOUNT)
+        facebook_text = _("I just enrolled in {number} {title}: {url}").format(
+            number=course.number,
+            title=course.display_name_with_default_escaped,
+            url=u"{protocol}://{domain}{path}".format(
+                    protocol=site_protocol,
+                    domain=site_domain,
+                    path=urllib.quote_plus(
+                        reverse('about_course', args=[text_type(course.id)]),
+                    )
+                )
+        ).replace(u" ", u"%20")
+        course_url=u"{protocol}://{domain}{path}".format(
+            protocol=site_protocol,
+            domain=site_domain,
+            path=urllib.quote_plus(
+                        reverse('about_course', args=[text_type(course.id)]),
+                    ),
+        )
+        facebook_action = u"https://www.facebook.com/sharer/sharer.php?u={course_url}&quote={facebook_text}".format(
+            course_url=course_url, facebook_text=facebook_text
+        )
 
         email_subject = u"mailto:?subject={subject}&body={body}".format(
             subject=_("Take a course with {platform} online").format(platform=platform_name),
@@ -57,7 +77,7 @@ from six import text_type
       <a href="${tweet_action}" class="share" target="_blank">
         <span class="icon fa fa-twitter" aria-hidden="true"></span><span class="sr">${_("Tweet that you've enrolled in this course")}</span>
       </a>
-      <a href="${facebook_link}" class="share" target="_blank">
+      <a href="${facebook_action}" class="share" target="_blank">
         <span class="icon fa fa-thumbs-up" aria-hidden="true"></span><span class="sr">${_("Post a Facebook message to say you've enrolled in this course")}</span>
       </a>
       <a href="${email_subject}" class="share">
