--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -39,6 +39,9 @@ from openedx.core.djangolib.js_utils import js_escaped_string
               </div>
           </div>
       </div>
+      <div class="video-load-error" style="display:none;justify-content:center;align-items:center;background:#F5F5F5;color:black;">
+          <p style="width:auto;">Error loading video. Please reload the page.</p>
+      </div>
     </div>
 
     <div class="focus_grabber last"></div>
