[AMATX-457] Fix error height

--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -39,7 +39,7 @@ from openedx.core.djangolib.js_utils import js_escaped_string
               </div>
           </div>
       </div>
-      <div class="video-load-error" style="display:none;justify-content:center;align-items:center;background:#F5F5F5;">
+      <div class="video-load-error" style="display:none;justify-content:center;align-items:center;height:400px;background:#F5F5F5;">
           <p style="width:auto;margin: auto;color: black;font-size: 1.3em;">Error loading video. Please reload the page.</p>
       </div>
     </div>
