--- a/cms/templates/edit-tabs.html
+++ b/cms/templates/edit-tabs.html
@@ -12,7 +12,7 @@
 <%block name="bodyclass">is-signedin course view-static-pages</%block>
 
 <%block name="header_extras">
-% for template_name in ["basic-modal", "modal-button", "edit-xblock-modal", "editor-mode-button"]:
+% for template_name in ["basic-modal", "modal-button", "edit-xblock-modal", "editor-mode-button", "upload-dialog"]:
 <script type="text/template" id="${template_name}-tpl">
     <%static:include path="js/${template_name}.underscore" />
 </script>
@@ -26,6 +26,7 @@
 </%block>
 
 <%block name="content">
+<div data-course-key-custom="${ context_course.id }"></div>
 <div class="wrapper-mast wrapper">
   <header class="mast has-actions has-subtitle">
     <h1 class="page-header">
@@ -72,8 +73,11 @@
                     css_class = css_class + " is-fixed"
                 %>
 
-                % if isinstance(tab, StaticTab) or isinstance(tab, VideoTab):
+                % if isinstance(tab, StaticTab):
                     <li class="component ${css_class}" data-locator="${tab.locator}" data-tab-id="${tab.tab_id}"></li>
+
+                % elif isinstance(tab, VideoTab):
+                    <li style="display: none" class="component ${css_class}" data-locator="${tab.locator}" data-tab-id="${tab.tab_id}"></li>
 
                 % else:
                     <li class="course-nav-item ${css_class}" data-tab-id="${tab.tab_id}">
@@ -133,7 +137,7 @@
           <div class="add-pages">
               <p>${_("You can add additional custom pages to your course.")} <a href="#" class="button new-button new-tab"><span class="icon fa fa-plus" aria-hidden="true"></span>${_("Add a New Page")}</a></p>
           </div>
-          <div class="add-pages">
+          <div class="add-pages" style="display: none">
               <p>${_("You can add additional custom video pages to your course.")} <a href="#" class="button new-button new-video-tab"><span class="icon fa fa-plus" aria-hidden="true"></span>${_("Add a New Video Page")}</a></p>
           </div>
         </article>
