--- a/lms/templates/wiki/includes/editor_widget.html
+++ b/lms/templates/wiki/includes/editor_widget.html
@@ -1,9 +1,8 @@
 {% load i18n %}
 <p id="hint_id_content" class="help-block">
-    {% filter force_escape %}
-    {% blocktrans with start_link="<a id='cheatsheetLink' href='#cheatsheetModal' rel='leanModal'>" end_link="</a>" trimmed %}
-        Markdown syntax is allowed. See the {{ start_link }}cheatsheet{{ end_link }} for help.
-    {% endblocktrans %}
-    {% endfilter %}
+    {{ _("Markdown syntax is allowed. ")|force_escape }}
+    <a id='cheatsheetLink' href='#cheatsheetModal' rel='leanModal'>
+        {{ _("See the cheatsheet for help.")|force_escape }}
+    </a>
 </p>
 <textarea {{ attrs }}>{{ content }}</textarea>
