--- a/lms/templates/home.html
+++ b/lms/templates/home.html
@@ -1,4 +1,10 @@
 <%namespace name='static' file='static_content.html'/>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Home</title>
+</head>
 <%! main_css = "style-main-v1" %>
 <%static:css group='${self.attr.main_css}'/>
 <%static:webpack entry="commons"/>
