[AMATX-734] Request user data by employee id
employee_id added to app props

**Youtrack:**
- https://youtrack.raccoongang.com/issue/AMATX-764

---
Add to settings FEATURES:

```
"CATALOG_AWS_SETTINGS": {
    "CREDENTIALS": {
        "AWS_ACCESS_KEY_ID": "AWS_ACCESS_KEY_ID",
        "AWS_SECRET_ACCESS_KEY": "AWS_SECRET_ACCESS_KEY",
        "AWS_SESSION_TOKEN": "AWS_SESSION_TOKEN"
    },
    "REGION": "set-me",
    "BASE_API_URL": "https://s0kv32rjeh.execute-api.us-west-2.amazonaws.com/Prod"
},
```

--- a/lms/templates/home.html
+++ b/lms/templates/home.html
@@ -18,6 +18,9 @@ ${static.renderReact(
       "/static/"+settings.DEFAULT_SITE_THEME+"/images/nav-cards-1.png",
       "/static/"+settings.DEFAULT_SITE_THEME+"/images/nav-cards-2.png",
       "/static/"+settings.DEFAULT_SITE_THEME+"/images/nav-cards-3.png"
-    ]
+    ],
+    "userId": employee_id,
+    "baseAPIUrl": base_api_url,
+    "awsSettings": catalog_aws_settings
   }
 )}
