--- a/openedx/core/djangoapps/ace_common/templates/ace_common/edx_ace/return_to_course_cta.html
+++ b/openedx/core/djangoapps/ace_common/templates/ace_common/edx_ace/return_to_course_cta.html
@@ -24,6 +24,6 @@
         display: inline-block;
     ">
         {# old email clients require the use of the font tag :( #}
-        <font color="#ffffff"><b>{{ course_cta_text }}</b></font>
+        <font color="#ffffff">Click {{ course_cta_text }} to read the reply</font>
     </a>
 </p>
