[AMATX-1282/713] Fix duplicated get_credit request
**Youtrack:**
- https://youtrack.raccoongang.com/issue/AMATX-1282
- https://youtrack.raccoongang.com/issue/AMATX-713

Related xblock PR:
- https://bitbucket.org/appliedxxx/getcredit_xblock/pull-requests/14/fix-duplicated-get-credit-request

--- a/lms/templates/appliedx_includes/progress/completion.html
+++ b/lms/templates/appliedx_includes/progress/completion.html
@@ -24,6 +24,7 @@
          * Utility to enable only one Get-Credit click.
          */
         function enableGetCreditRequest() {
+            $("#course_recommend").off("click");
             $('#course_recommend').one("click", function(e) {
                 event.preventDefault()
                 CompleteEnrollment();
